# udemy_test_maker

./: LICENSE  NEXT_STEPS.md  README.md  SETUP_INSTRUCTIONS.md  csv_converter copy.py  csv_converter.py  input.html  input2.html  manage.py  output.csv  output2.csv  output2.html  prompt.txt  pyproject.toml
templates/: base.html
templates/tests_app/: dashboard.html  error.html  question_confirm_delete.html  question_detail.html  question_form.html  question_list.html
tests_app/: admin.py  api_views copy.py  api_views.py  apps.py  models.py  udemy_csv_template.csv  urls.py  views.py
tests_app/management/commands/: populate_sample_data.py
tests_app/migrations/: 0001_initial.py  0002_alter_question_domain.py  0003_remove_question_created_by_and_more.py
tests_app/utils/: csv_generator.py  domain_keywords.py  domain_suggester.py
udemy_test_maker/: asgi.py  settings.py  urls.py  wsgi.py
